# ndarray-interp

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
benches/: bench_interp1d.rs  bench_interp1d_query_dim.rs  bench_interp2d.rs  bench_interp2d_query_dim.rs  bench_vector_extensions.rs  rand_extensions.rs  vector_extensions.rs
examples/: custom_strategy.rs
src/: aliases.rs  dim_extensions.rs  interp1d.rs  interp2d.rs  lib.rs  vector_extensions.rs
src/interp1d/: aliases.rs  mod.rs  strategies.rs
src/interp1d/strategies/: cubic_spline.rs  linear.rs
src/interp2d/: aliases.rs  mod.rs  strategies.rs
src/interp2d/strategies/: bilinear.rs  biliniar.rs  mod.rs
tests/: cubic_spline_strat.rs  interp1d.rs  interp2d.rs
