[package]
name = "ndarray-interp"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Interpolation package for ndarray"
repository = "https://github.com/jonasBoss/ndarray-interp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
cargo-tarpaulin = "0.26"
ndarray = {version = "0.15", features = ["approx-0_5"] }
approx = "0.5" 
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "vector_extensions"
harness = false
