[package]
name = "ndarray-interp"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Interpolation package for ndarray"
repository = "https://github.com/jonasBoss/ndarray-interp"

keywords = ["interpolation", "multidimensional", "linear", "bilinear", "cubic-spline"]
categories = ["science", "algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.16"
num-traits = "0.2"
thiserror = "2.0"

[dev-dependencies]
cargo-tarpaulin = "0.27"
ndarray = {version = "0.16", features = ["approx", "rayon"] }
approx = "0.5" 
criterion = "0.5"
rand = "0.9"

[[bench]]
name = "bench_vector_extensions"
harness = false

[[bench]]
name = "bench_interp1d"
harness = false

[[bench]]
name = "bench_interp1d_query_dim"
harness = false

[[bench]]
name = "bench_interp2d"
harness = false

[[bench]]
name = "bench_interp2d_query_dim"
harness = false
